--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
 }
 
 /* apply styles to <header> */
-header, h1 {
+header {
     padding: 20px 35px;
     background-color: #39a6b2;
 }
@@ -30,7 +31,7 @@ header a {
 
 header nav {
     float: right;
-    margin: 7px;
+    margin: 7px 0;
 }
 
 header nav ul li {
@@ -41,4 +42,27 @@ header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size:  20px;
+}
+
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: #024e76;
 }
