--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -78,18 +78,13 @@ section {
 
 /* Hero Style Start */
 .hero {
-    background-image: url("../images/hero-bg.jpeg");
+    background-image: url("../images/hero-bg-1.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
     position: relative;
 }
 /* Hero Style End */
-
-.hero-form h3 {
-    font-size: 24px;
-    margin: 0;
-}
 
 .hero-form {
     background-color: #fce138;
@@ -100,6 +95,11 @@ section {
     position: absolute;
     bottom: 120px;
     right: 140px;
+}
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
 }
 
 .hero-form p {
