--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -10,7 +10,8 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+/* HEADER / NAV BAR STYLES START */
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -44,6 +45,8 @@ header nav ul li a {
     font-size:  22px;
 }
 
+/* HEADER / NAV STYLES END */
+
 h3 {
     margin: 0px;
 
@@ -72,6 +75,7 @@ footer a {
     color: #024e76;
 }
 
+/* STYLE ALL SECTION TAGS */
 section {
     padding: 60px;
 }
@@ -126,6 +130,8 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+/* HEARO STYLES END */
+
 
 .intro {
     text-align: center;
@@ -168,6 +174,7 @@ section {
     font-size: 38px;
 }
 
+/* SECTION TITLE STYLES START */
 .section-title {
      font-size: 55px;
     color: #024e76;
@@ -177,9 +184,9 @@ section {
     border-bottom: 3px solid;
   }
   
-  .primary-border {
-    border-color: #fce138;
-  }
+.primary-border {
+  border-color: #fce138;
+}
   
   .secondary-border {
     border-color: #39a6b2;
@@ -232,6 +239,7 @@ section {
       line-height: 1.3;
   }
 
+  /* REACH OUT STYLES START */
   .contact {
       background: #024e76;
       text-align: center;
@@ -279,5 +287,9 @@ section {
   .contact-info a {
     color: #fce138;
   }
+
+
+  /* REACH OUT STYLES END */
   
+  /* UTILITIES */
   
