added flexbox to section title

--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -154,7 +154,6 @@ section {
 
 
 .intro {
-    text-align: center;
 }
 
 .intro p {
@@ -163,10 +162,10 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -196,21 +195,22 @@ section {
 
 /* SECTION TITLE STYLES START */
 .section-title {
-     font-size: 55px;
+    font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   
 .primary-border {
   border-color: #fce138;
 }
   
-  .secondary-border {
-    border-color: #39a6b2;
-  }
+.secondary-border {
+  border-color: #39a6b2;
+}
 
   .trainers {
       text-align: center;
@@ -235,14 +235,6 @@ section {
       width: 65%;
   }
 
-  .text-left {
-      text-align: left;
-  }
-
-  .text-right {
-      text-align: right;
-  }
-
   .trainer-bio h3 {
       font-size: 32px;
       margin-bottom: 8px;
@@ -262,7 +254,6 @@ section {
   /* REACH OUT STYLES START */
   .contact {
       background: #024e76;
-      text-align: center;
   }
 
   .contact h2 {
@@ -312,4 +303,15 @@ section {
   /* REACH OUT STYLES END */
   
   /* UTILITIES */
-  
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.flex-row {
+  display: flex;
+}
