--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -22,9 +22,10 @@ header {
 
 header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
+    
 }
 
 header a {
@@ -152,10 +153,6 @@ section {
 }
 /* HEARO STYLES END */
 
-
-.intro {
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -169,29 +166,42 @@ section {
     background: #fce138;
 }
 
-.steps div {
-    margin-bottom: 80px;
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
+.step-info {
+  flex: 2 70%;
 }
 
-.steps h3 {
-    color: #024e76;
-    font-size: 46px;
-    margin-top: 10px;
+.step h3 {
+  color: #024e76;
+  font-size: 46px;
+  flex: 1 30%;
 }
-
-.steps p {
-    color: #39a6b2;
-    font-size: 23px;
-}
-
+/* 
 .steps span {
-    font-size: 38px;
+  font-size: 38px;
+} */
+
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76
 }
+
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+}
+
 
 /* SECTION TITLE STYLES START */
 .section-title {
