--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -18,12 +18,20 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg-1.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0,0,0 0.5)
 }
 
 header a {
@@ -47,6 +55,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size:  1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* HEADER / NAV STYLES END */
@@ -89,11 +105,13 @@ section {
 .hero {
     background-image: url("../images/hero-bg-1.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+
 }
 
 .hero-cta {
@@ -103,22 +121,26 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  
 }
 /* Hero Style End */
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -138,7 +160,18 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
 }
+
+.form-input {
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
+
 .hero-form label {
     margin: 0 5px;;
 }
@@ -149,6 +182,20 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
+
+.text-shadow {
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* HEARO STYLES END */
 
@@ -169,11 +216,14 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:not(:last-child) {
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step-info {
@@ -233,96 +283,132 @@ section {
   border-color: #39a6b2;
 }
 
-  .trainers {
+.trainers {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-  }
+}
 
-  .trainer {
+.trainer {
       margin: 0 auto 20px auto;
       background: #024e76;
       color: #fce138;
       flex: 1;
-  }
+}
 
-  .trainer img {
-    width: 100%;
-  }
+.trainer img {
+  width: 100%;
+}
 
-  .trainer-bio {
-      padding: 25px;
-      line-height: 1.3;
-  }
+.trainer-bio {
+  padding: 25px;
+  line-height: 1.3;
+}
 
-  .trainer-bio h3 {
-      font-size: 28px;
-  }
+.trainer-bio h3 {
+  font-size: 28px;
+}
 
-  .trainer-bio h4 {
-      font-weight: lighter;
-      font-size: 22px;
-      margin-bottom: 15px;
-  }
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
 
-  .trainer-bio p {
-      font-size: 17px;
-  }
+.trainer-bio p {
+  font-size: 17px;
+}
 
-  /* REACH OUT STYLES START */
-  .contact {
-      background: #024e76;
-  }
+/* REACH OUT STYLES START */
+.contact {
+  background: #024e76;
+}
 
-  .contact h2 {
-      color: #fce138;
-  }
+.contact h2 {
+  color: #fce138;
+}
 
-  .contact-info iframe {
-      width: 400px;
-      height: 400px;
-  }
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-  .contact-info iframe {
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+  /* .contact-info iframe {
     width: 410px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
-  }
+  } */
 
-  .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
-    color: white;
-  }
+.contact-info div {
+  color: white;
+}
 
-  .contact-info h3 {
-    color: #fce138;
-    font-size: 32px;
-  }
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
   
-  .contact-info p, .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 20px;
-    font-style: normal;
-  }
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  background-color: rgba(255,255,255, 0.75);
+  outline: 0;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  border-radius: 10px;
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1.0);
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+  border-radius: 10px;
+}
   
-  .contact-info a {
-    color: #fce138;
-  }
+.contact-info a {
+  color: #fce138;
+}
 
 
-  /* REACH OUT STYLES END */
+/* REACH OUT STYLES END */
   
-  /* UTILITIES */
+/* UTILITIES */
 
 .text-left {
   text-align: left;
@@ -352,6 +438,7 @@ section {
   }
   
   header {
+    position: relative;
     padding-bottom: 0;
     justify-content: center;
   }
