--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -1,9 +1,3 @@
-:root {
-  --primary-color: #fce138;
-  --secondary-color: #024e76;
-  --tertiary-color: #39a6b2;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +6,7 @@
 
 body {
     /* I'm a CSS comment! */
-    color: var(--tertiary-color);
+    color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -20,7 +14,7 @@ body {
 
 header {
     padding: 20px 35px;
-    background-color: var(--tertiary-color);
+    background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -31,19 +25,18 @@ header {
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
-    z-index: 9999;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: var(--primary-color);
+    color: #fce138;
     text-shadow: 0 0 10px rgba(0,0,0 0.5)
 }
 
 header a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: #fce138;
 }
 
 header nav {
@@ -66,8 +59,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background: var(--primary-color);
-  color: var(--secondary-color);
+  background: #fce138;
+  color: #024e76;
   border-radius: 15px;
   text-shadow: none;
 }
@@ -83,13 +76,13 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  background: var(--primary-color);
+  background: #fce138;
   width: 100%;
   padding: 40px 35px;
 }
 
 footer h2 {
-    color: var(--secondary-color);
+    color: #024e76;
     font-size: 30px;
     margin: 0;
 }
@@ -100,7 +93,7 @@ footer div {
 }
 
 footer a {
-    color: var(--secondary-color);
+    color: #024e76;
 }
 
 /* STYLE ALL SECTION TAGS */
@@ -134,7 +127,7 @@ section {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: var(--primary-color);
+  color: #fce138;
   
 }
 /* Hero Style End */
@@ -142,8 +135,8 @@ section {
 .hero-form {
     background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
-    color: var(--secondary-color);
-    border: solid 3px var(--secondary-color);
+    color: #024e76;
+    border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -160,11 +153,11 @@ section {
 }
 
 .form-input {
-    border: 1px solid var(--secondary-color); 
+    border: 1px solid #024e76; 
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: var(--secondary-color);
+    color: #024e76;
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -184,8 +177,8 @@ section {
 }
 
 .hero-form button {
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
+    color: #fce138;
+    background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -193,83 +186,22 @@ section {
 }
 
 .hero-form button:hover {
-  background-color: var(--tertiary-color);
+  background-color: #39a6b2;
 }
 
 .contact-form button:hover {
-  color: var(--primary-color);
-  background: var(--tertiary-color);
-}
-
-.checkbox-wrapper input, .radio-wrapper input {
-  opacity: 0;
-}
-
-.checkbox-wrapper label, .radio-wrapper label {
-  position: relative;
-  left: 10px;
-  margin: 10px;
-  line-height: 1.6;
-}
-
-.checkbox-wrapper label::before, .radio-wrapper label::before {
-  content: "";
-  height: 15px;
-  width: 15px;
-  background: rgba(255,255,255, 0.75);
-  border: 1px solid var(--secondary-color);
-  position: absolute;
-  top: 0px;
-  left: -27px
-}
-
-
-.radio-wrapper label::before {
-  border-radius: 50%;
-}
-
-.radio-wrapper label::after {
-  content: "";
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: var(--secondary-color);
-  position: absolute;
-  left: -29px;
-  top: -3px;
-  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
-}
-
-.checkbox-wrapper label::after {
-  content: "";
-  height: 6px;
-  width: 14px;
-  border-left: 2px solid var(--secondary-color);
-  border-bottom: 2px solid var(--secondary-color);
-  transform: rotate(-58deg);
-  position: absolute;
-  left: -26px;
-  top: 1px;
-}
-
-.checkbox-wrapper input + label::after,
-.radio-wrapper input + label::after {
-  content: none;
-}
-
-.checkbox-wrapper input:checked + label::after,
-.radio-wrapper input:checked + label::after {
-  content: "";
+  color: #fce138;
+  background: #39a6b2;
 }
 
 .text-shadow {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-/* HERO STYLES END */
+/* HEARO STYLES END */
 
 .intro p {
     line-height: 1.7;
-    color: var(--tertiary-color);
+    color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -277,7 +209,7 @@ section {
 }
 
 .steps {
-    background: var(--primary-color);
+    background: #fce138;
 }
 
 .step {
@@ -291,7 +223,7 @@ section {
 }
 
 .step:not(:last-child) {
-  border-bottom: 1px solid var(--tertiary-color);
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step-info {
@@ -315,7 +247,7 @@ section {
 }
 
 .step h3 {
-  color: var(--secondary-color);
+  color: #024e76;
   font-size: 46px;
   flex: 1 30%;
 }
@@ -323,11 +255,11 @@ section {
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
-  color: var(--secondary-color)
+  color: #024e76
 }
 
 .step-text p {
-    color: var(--tertiary-color);
+    color: #39a6b2;
     font-size: 18px;
 }
 
@@ -335,7 +267,7 @@ section {
 /* SECTION TITLE STYLES START */
 .section-title {
     font-size: 48px;
-    color: var(--secondary-color);
+    color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -344,11 +276,11 @@ section {
   }
   
 .primary-border {
-  border-color: var(--primary-color);
+  border-color: #fce138;
 }
   
 .secondary-border {
-  border-color: var(--tertiary-color);
+  border-color: #39a6b2;
 }
 
 .trainers {
@@ -361,8 +293,8 @@ section {
 
 .trainer {
       margin: 0 auto 20px auto;
-      background: var(--secondary-color);
-      color: var(--primary-color);
+      background: #024e76;
+      color: #fce138;
       flex: 1;
 }
 
@@ -391,11 +323,11 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  background: var(--secondary-color);
+  background: #024e76;
 }
 
 .contact h2 {
-  color: var(--primary-color);
+  color: #fce138;
 }
 
 .contact-info {
@@ -429,7 +361,7 @@ section {
 }
 
 .contact-info h3 {
-  color: var(--primary-color);
+  color: #fce138;
   font-size: 32px;
 }
   
@@ -441,13 +373,13 @@ section {
 }
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid var(--secondary-color);
+  border: 1px solid #024e76;
   background-color: rgba(255,255,255, 0.75);
   outline: 0;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: var(--secondary-color);
+  color: #024e76;
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -461,8 +393,8 @@ section {
 .contact-form button {
   width: 100%;
   border: none;
-  background: var(--primary-color);
-  color: var(--secondary-color);
+  background: #fce138;
+  color: #024e76;
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -470,7 +402,7 @@ section {
 }
   
 .contact-info a {
-  color: var(--primary-color);
+  color: #fce138;
 }
 
 
