--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     /* I'm a CSS comment! */
     color: var(--tertiary-color);
